--- a/src/School/StudentBundle/Resources/config/routing.yml
+++ b/src/School/StudentBundle/Resources/config/routing.yml
@@ -1,3 +1,55 @@
 school_student_homepage:
     path:     /hello/{name}
     defaults: { _controller: SchoolStudentBundle:Default:index }
+
+school_student_show:
+    path:       /Gestion/student/{id}
+    defaults: { _controller: SchoolStudentBundle:Student:show}
+    requirements:
+      id: \d+
+
+school_student_add:
+    path:       /Gestion/student/add
+    defaults: { _controller: SchoolStudentBundle:Student:add}
+
+school_student_list:
+    path:       /Gestion/listeEleves
+    defaults: { _controller: SchoolStudentBundle:Student:list}
+
+school_student_edit:
+    path:       /Gestion/student/edit/{id}
+    defaults: { _controller: SchoolStudentBundle:Student:edit}
+    requirements:
+      id: \d+
+
+school_student_delete:
+    path:       /Gestion/student/{id}/delete
+    defaults: { _controller: SchoolStudentBundle:Student:delete}
+    requirements:
+      id: \d+
+
+school_class_add:
+    path:       /Gestion/class/add
+    defaults: { _controller: SchoolStudentBundle:Classe:add}
+
+school_class_edit:
+    path:       /Gestion/class/edit/{id}
+    defaults: { _controller: SchoolStudentBundle:Classe:edit}
+    requirements:
+      id: \d+
+
+school_class_show:
+    path:       /Gestion/class/{id}
+    defaults: { _controller: SchoolStudentBundle:Classe:show}
+    requirements:
+      id: \d+
+
+school_class_list:
+    path:       /Gestion/listClasses
+    defaults: { _controller: SchoolStudentBundle:Classe:list}
+
+school_class_delete:
+    path:       /Gestion/class/{id}/delete
+    defaults: { _controller: SchoolStudentBundle:Classe:delete}
+    requirements:
+      id: \d+
