Gesttion des exceptions et implementations des methodes pour le remplissage des notes

--- a/src/School/StudentBundle/Resources/config/routing/inscription.yml
+++ b/src/School/StudentBundle/Resources/config/routing/inscription.yml
@@ -7,17 +7,24 @@ inscription_show:
     defaults: { _controller: "SchoolStudentBundle:Inscription:show" }
 
 inscription_new:
-    path:     /new
+    path:     /new/eleve-{idStudent}
     defaults: { _controller: "SchoolStudentBundle:Inscription:new" }
+    requirements:
+            idStudent: \d+
+
+inscription_notyet:
+    path:     /aInscrire/
+    defaults: { _controller: "SchoolStudentBundle:Inscription:aInscrire" }
 
 inscription_create:
-    path:     /create
+    path:     /create/eleve-{idStudent}
     defaults: { _controller: "SchoolStudentBundle:Inscription:create" }
     requirements: { _method: post }
 
 inscription_edit:
     path:     /{id}/edit
     defaults: { _controller: "SchoolStudentBundle:Inscription:edit" }
+    #requirements: { _method: post|put }
 
 inscription_update:
     path:     /{id}/update
