--- a/src/School/NoteBundle/Resources/config/routing/evaluation.yml
+++ b/src/School/NoteBundle/Resources/config/routing/evaluation.yml
@@ -38,16 +38,20 @@ evaluation_delete:
     requirements: { _method: post|delete }
 
 note_add:
-    path: /{id}/{idSeq}/{idMat}/notes/add
+    path: /classe-{id}/sequence-{idSeq}/matiere-{idMat}/annee-{idAnnee}/notes/add
     defaults: { _controller: "SchoolNoteBundle:Evaluation:note"}
     #requirements: { _method: post|put }
 
 note_editnote:
-    path: /{id}/{idSeq}/{idMat}/notes/edit
+    path: /classe-{id}/sequence-{idSeq}/matiere-{idMat}/annee-{idAnnee}/notes/edit
     defaults: { _controller: "SchoolNoteBundle:Evaluation:editnote"}
-    #requirements: { _method: post|put }
+    requirements:
+            id: \d+
+            idSeq: \d+
+            idMat: \d+
+            idAnnee: \d+
 
 note_inserer:
-    path: /{idNote}/{idClasse}/notes/modifier
+    path: /note-{idNote}/classe-{idClasse}/annee-{idAnnee}/notes/modifier
     defaults: { _controller: "SchoolNoteBundle:Evaluation:insererNote"}
     #requirements: { _method: post|put }
